[gd_scene load_steps=3 format=3 uid="uid://c3kahjdxe5os5"]

[ext_resource type="Script" uid="uid://b48aggt7jhgxm" path="res://addons/texture_region_editor/texture_region_editor_control.gd" id="1_6t6t8"]
[ext_resource type="Script" uid="uid://b6k8de8ltoaqe" path="res://addons/texture_region_editor/region_overlay.gd" id="2_1fuij"]

[node name="TextureRegionEditorControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6t6t8")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 2

[node name="RegionOverlay" type="Control" parent="ScrollContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1fuij")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="StepLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Step"

[node name="StepXSpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 16.0
prefix = "x:"
suffix = "px"

[node name="StepYSpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 16.0
prefix = "y:"
suffix = "px"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="SetRegionButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Set Region"

[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/StepXSpinBox" to="." method="_on_step_x_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/StepYSpinBox" to="." method="_on_step_y_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/SetRegionButton" to="." method="_on_set_region_button_pressed"]
